# eval-sklearn

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  config.py  config_public.ini  environment.yml  helpers_evaluation.py  helpers_modeling.py  helpers_preprocessing.py  pyproject.toml  scikit-learn_exercises.py  setup.cfg  sklearn_helpers.py  workflow_classification.ipynb  workflow_classification.py
.github/workflows/: pre-commit.yaml  tests.yaml
data/: data_classification_notebooks.pkl  data_classification_testing.pkl  data_clustering_notebooks.pkl  data_clustering_testing.pkl  data_regression_notebooks.pkl  data_regression_testing.pkl
eval_sklearn/data/: generate_data.py
eval_sklearn/evaluation/: base.py  classification.py  clustering.py  regression.py
eval_sklearn/modeling/: __init__.py  helpers_modeling.py
eval_sklearn/preprocessing/: __init__.py
helpers/: generate_data.py
notebooks/: workflow_classification.ipynb
src/data/: generate_data.py
src/evaluation/: __init__.py  base.py  classification.py
src/preprocessing/: helpers_preprocessing.py
tests/: conftest.py  test.py  test_agglomerative_clustering.py  test_clustering.py  test_default.py  test_kmeans_clustering.py
