[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

# make isort compatible with black
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
# command line options for pytest
addopts = "--verbose --cov=eval_sklearn"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.mypy]
mypy_path = "eval_sklearn"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
