[metadata]
name = eval_sklearn
version = 0.0.1
author = Joel Beck
author_email = joel.beck@stud.uni-goettingen.de
description = Convenience Functions for evaluating Scikit-Learn Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joel-beck/eval_sklearn
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10