[metadata]
name = eval_sklearn
version = 0.0.1
author = Joel Beck
author_email = joel.beck@stud.uni-goettingen.de
description = Convenience Functions for Evaluating Scikit-Learn Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joel-beck/eval_sklearn
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib >= 3.5
    numpy >= 1.22
    pandas >= 1.4
    scikit-learn >= 1.0
    seaborn >= 0.11

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    pyupgrade
    xgboost >= 1.5

[flake8]
max-line-length = 88
extend-ignore = E203
